--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 
     </head>
     <body>
-        
+
+        <script src="/static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     </body>
 </html>
