--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
 
+        <script src="/static/js/jquery.min.js" type="text/javascript"></script>
         <script src="/static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     </body>
 </html>
