Add tags to head

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Nick Mykkanen is a website developer and software engineer in Duluth, Minnesota">
+        <meta name="author" content="Nick Mykkanen">
+        <meta name="robots" content="index, follow">
+        <link rel="canonical" href="https://nickm.dev">
 
+        <title>Nick Mykkanen</title>
+
+        <link rel="stylesheet" href="css/style.compiled.css">
     </head>
     <body>
 
