--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     </head>
 
     <body data-spy="scroll" data-target=".navbar" data-offset="50" id="page-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
             <a class="navbar-brand" href="#">Expand at lg</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#primaryNavigation" aria-controls="primaryNavigation" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,13 +24,13 @@
             <div class="collapse navbar-collapse" id="primaryNavigation">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                            <a class="nav-link" href="#section1">Link</a>
+                        <a class="nav-link" href="#section1">Link</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#section2">Link</a>
+                        <a class="nav-link" href="#section2">Link</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#section3">Link</a>
+                        <a class="nav-link" href="#section3">Link</a>
                     </li>
                 </ul>
             </div>
