--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
             <div class="collapse navbar-collapse" id="primaryNavigation">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#section1">Link</a>
+                        <a class="nav-link" href="#section1">test1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#section2">Link</a>
+                        <a class="nav-link" href="#section2">test2</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#section3">Link</a>
+                        <a class="nav-link" href="#section3">test3</a>
                     </li>
                 </ul>
             </div>
