--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
         <section class="section section-2" id="section2"></section>
         <section class="section section-3" id="section3"></section>
 
-        <script src="/static/js/jquery.min.js" type="text/javascript"></script>
-        <script src="/static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+        <script src="static/js/jquery.min.js" type="text/javascript"></script>
+        <script src="static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     </body>
 
 </html>
