--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
     <body data-spy="scroll" data-target=".navbar" data-offset="50" id="page-top">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-            <a class="navbar-brand" href="#page-top"></a>
+            <a class="navbar-brand" href="#page-top"><img src="static/img/nickmykkanen.svg" alt="Nick Mykkanen Logo" class="img-fluid"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#primaryNavigation" aria-controls="primaryNavigation" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
