Update header style and scripts

--- a/src/index.html
+++ b/src/index.html
@@ -15,33 +15,33 @@
     </head>
 
     <body data-spy="scroll" data-target=".navbar" data-offset="50" id="page-top">
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-            <a class="navbar-brand" href="#page-top"><img src="static/img/nickmykkanen.svg" alt="Nick Mykkanen Logo" class="img-fluid"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#primaryNavigation" aria-controls="primaryNavigation" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="primaryNavigation">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#section1">test1</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#section2">test2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#section3">test3</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-        <section class="section section-1" id="section1"></section>
-        <section class="section section-2" id="section2"></section>
-        <section class="section section-3" id="section3"></section>
+        <header>
+            <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+                <div class="container">
+                    <a class="navbar-brand" href="#page-top"><img src="static/img/nickmykkanen.svg" alt="Nick Mykkanen Logo" class="img-fluid"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#primaryNavigation" aria-controls="primaryNavigation" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="primaryNavigation">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#section1">test1</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#section2">test2</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#section3">test3</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
         <script src="static/js/jquery.min.js" type="text/javascript"></script>
         <script src="static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+        <script src="js/script.js" type="text/javascript"></script>
     </body>
 
 </html>
