Update index text and add fontawesome script file

--- a/src/index.html
+++ b/src/index.html
@@ -23,21 +23,57 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="primaryNavigation">
-                        <ul class="navbar-nav mr-auto">
+                        <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="#section1">test1</a>
+                                <a class="nav-link" href="#about">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#section2">test2</a>
+                                <a class="nav-link" href="#education">Education</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#section3">test3</a>
+                                <a class="nav-link" href="#experience">Experience</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#skills">Skills</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#interests">Interests</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Contact</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </header>
+
+        <section class="about" id="about">
+            <div class="about-title">
+                <h1>
+                    <span>Nick</span>
+                    <span>Mykkanen</span>
+                </h1>
+            </div>
+            <div class="contact-info">
+                <span class="location">Duluth, MN, USA</span>
+                <span class="phone"><a href="tel:(218) 451-2008">(218) 451-2008</a></span>
+            </div>
+            <div class="about-content">
+                <p>I'm a website developer in Duluth, Minnesota. I use modern technologies and frameworks to create functional interfaces, designed with the user in mind. </p>
+            </div>
+            <div class="social-icons"></div>
+        </section>
+
+        <section class="education" id="education"></section>
+
+        <section class="experience" id="experience"></section>
+
+        <section class="skills" id="skills"></section>
+
+        <section class="interests" id="interests"></section>
+
+        <section class="contact" id="contact"></section>
 
         <script src="static/js/jquery.min.js" type="text/javascript"></script>
         <script src="static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
