--- a/src/index.html
+++ b/src/index.html
@@ -15,38 +15,36 @@
     </head>
 
     <body data-spy="scroll" data-target=".navbar" data-offset="50" id="page-top">
-        <header>
-            <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-                <div class="container">
-                    <a class="navbar-brand" href="#page-top"><img src="static/img/nickmykkanen.svg" alt="Nick Mykkanen Logo" class="img-fluid"></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#primaryNavigation" aria-controls="primaryNavigation" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="primaryNavigation">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#about">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#education">Education</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#experience">Experience</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#skills">Skills</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#interests">Interests</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#contact">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#page-top"><img src="static/img/nickmykkanen.svg" alt="Nick Mykkanen Logo" class="img-fluid"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#primaryNavigation" aria-controls="primaryNavigation" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="primaryNavigation">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#education">Education</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#experience">Experience</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skills">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#interests">Interests</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </header>
+            </div>
+        </nav>
 
         <section class="about" id="about">
             <div class="about-title">
@@ -60,9 +58,9 @@
                 <span class="phone"><a href="tel:(218) 451-2008">(218) 451-2008</a></span>
             </div>
             <div class="about-content">
-                <p>I'm a website developer in Duluth, Minnesota. I use modern technologies and frameworks to create functional interfaces, designed with the user in mind. </p>
+                <p>I'm a website developer in Duluth, Minnesota. I use modern technologies and frameworks to create functional interfaces, designed with the user in mind.</p>
             </div>
-            <div class="social-icons"></div>
+            <div class="social-icons"><span class="fab fa-facebook"></span></div>
         </section>
 
         <section class="education" id="education"></section>
@@ -78,6 +76,7 @@
         <script src="static/js/jquery.min.js" type="text/javascript"></script>
         <script src="static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
         <script src="js/script.js" type="text/javascript"></script>
+        <script src="static/js/all.min.js" type="text/javascript"></script>
     </body>
 
 </html>
