--- a/src/index.html
+++ b/src/index.html
@@ -46,21 +46,56 @@
             </div>
         </nav>
 
+        <section class="hero" id="hero">
+            
+        </section>
+
         <section class="about" id="about">
-            <div class="about-title">
-                <h1>
-                    <span>Nick</span>
-                    <span>Mykkanen</span>
-                </h1>
+            <div class="container">
+
+                <div class="about-title">
+                    <h1>
+                        <span>Nick</span>
+                        <span>Mykkanen</span>
+                    </h1>
+                </div>
+                <div class="contact-info">
+                    <span class="location">Duluth, MN, USA</span>
+                    <span class="phone"><a href="tel:(218) 451-2008">(218) 451-2008</a></span>
+                </div>
+                <div class="about-content">
+                    <p>I'm a website developer in Duluth, Minnesota. I use modern technologies and frameworks to create functional interfaces, designed with the user in mind.</p>
+                </div>
+                <div class="social-icons">
+                    <ul>
+                        <li>
+                            <a href="/" title="LinkedIn" target="_blank">
+                                <span class="fab fa-facebook-f" aria-label="Facebook"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/" title="GitHub" target="_blank">
+                                <span class="fab fa-facebook-f" aria-label="Facebook"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/" title="Gitlab" target="_blank">
+                                <span class="fab fa-facebook-f" aria-label="Facebook"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/" title="Facebook" target="_blank">
+                                <span class="fab fa-facebook-f" aria-label="Facebook"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/" title="Facebook" target="_blank">
+                                <span class="fab fa-facebook-f" aria-label="Facebook"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="contact-info">
-                <span class="location">Duluth, MN, USA</span>
-                <span class="phone"><a href="tel:(218) 451-2008">(218) 451-2008</a></span>
-            </div>
-            <div class="about-content">
-                <p>I'm a website developer in Duluth, Minnesota. I use modern technologies and frameworks to create functional interfaces, designed with the user in mind.</p>
-            </div>
-            <div class="social-icons"><span class="fab fa-facebook"></span></div>
         </section>
 
         <section class="education" id="education"></section>
