Update about and experience sections

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,10 @@
                             <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#education">Education</a>
+                            <a class="nav-link" href="#experience">Experience</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#experience">Experience</a>
+                            <a class="nav-link" href="#education">Education</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#skills">Skills</a>
@@ -47,50 +47,69 @@
         </nav>
 
         <section class="hero" id="hero">
-            
-        </section>
-
-        <section class="about" id="about">
             <div class="container">
-
-                <div class="about-title">
+                <div class="photo">
+                    <img src="static/img/nick.jpg" alt="Nick Mykkanen">
+                </div>
+                <div class="name">
                     <h1>
                         <span>Nick</span>
                         <span>Mykkanen</span>
                     </h1>
                 </div>
-                <div class="contact-info">
-                    <span class="location">Duluth, MN, USA</span>
-                    <span class="phone"><a href="tel:(218) 451-2008">(218) 451-2008</a></span>
+                <div class="separator light">
+                    <span class="fa fas fa-star" aria-hidden="true"></span>
                 </div>
+                <div class="title">
+                    <h2>Website Developer <span>•</span> Software Engineer</h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="about" id="about">
+            <div class="container">
+                <div class="about-title">
+                    <h2>
+                        <span>About</span>
+                        <span>Nick</span>
+                    </h2>
+                </div>
+                <div class="separator">
+                    <span class="fa fas fa-star" aria-hidden="true"></span>
+                </div>
+                <!-- <div class="contact-info">
+                    <span class="location">Duluth, MN, USA</span>
+                    <span> • </span>
+                    <span class="phone"><a href="tel:(218) 451-2008">(218) 451-2008</a></span>
+                </div> -->
                 <div class="about-content">
                     <p>I'm a website developer in Duluth, Minnesota. I use modern technologies and frameworks to create functional interfaces, designed with the user in mind.</p>
                 </div>
                 <div class="social-icons">
                     <ul>
                         <li>
-                            <a href="/" title="LinkedIn" target="_blank">
+                            <a href="https://www.linkedin.com/in/nick-mykkanen/" title="LinkedIn" target="_blank">
+                                <span class="fab fa-linkedin-in" aria-label="LinkedIn"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://gitlab.com/nickmykkanen" title="GitLab" target="_blank">
+                                <span class="fab fa-gitlab" aria-label="GitLab"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/nickmykkanen" title="GitHub" target="_blank">
+                                <span class="fab fa-github" aria-label="GitHub"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/nickmykkanen" title="Facebook" target="_blank">
                                 <span class="fab fa-facebook-f" aria-label="Facebook"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="/" title="GitHub" target="_blank">
-                                <span class="fab fa-facebook-f" aria-label="Facebook"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/" title="Gitlab" target="_blank">
-                                <span class="fab fa-facebook-f" aria-label="Facebook"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/" title="Facebook" target="_blank">
-                                <span class="fab fa-facebook-f" aria-label="Facebook"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="/" title="Facebook" target="_blank">
-                                <span class="fab fa-facebook-f" aria-label="Facebook"></span>
+                            <a href="https://t.me/nickmykkanen" title="Telegram" target="_blank">
+                                <span class="fab fa-telegram-plane" aria-label="Telegram"></span>
                             </a>
                         </li>
                     </ul>
@@ -98,9 +117,50 @@
             </div>
         </section>
 
-        <section class="education" id="education"></section>
+        <section class="experience" id="experience">
+            <div class="container">
+                <div class="experience-title">
+                    <h2>
+                        <span>My</span>
+                        <span>Experience</span>
+                    </h2>
+                </div>
+                <div class="separator">
+                    <span class="fa fas fa-star" aria-hidden="true"></span>
+                </div>
+                <div class="experience">
+                    <div class="experience-item">
+                        <h3 class="item-title">Senior Website Developer</h3>
+                        <h4 class="item-subtitle">ARI Network Services</h4>
+                        <p class="item-description">I did the things with the stuff</p>
+                        <div class="item-dates">
+                            <div class="start">March 2019</div>
+                            <div class="end">Present</div>
+                        </div>
+                    </div>
+                    <div class="experience-item">
+                        <h3 class="item-title">Website Developer</h3>
+                        <h4 class="item-subtitle">ARI Network Services</h4>
+                        <p class="item-description">I did the things with the stuff</p>
+                        <div class="item-dates">
+                            <div class="start">October 2017</div>
+                            <div class="end">February 2019</div>
+                        </div>
+                    </div>
+                    <div class="experience-item">
+                        <h3 class="item-title">Website Implementation Specialist</h3>
+                        <h4 class="item-subtitle">ARI Network Services</h4>
+                        <p class="item-description">I did the things with the stuff</p>
+                        <div class="item-dates">
+                            <div class="start">May 2016</div>
+                            <div class="end">December 2017</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <section class="experience" id="experience"></section>
+        <section class="education" id="education"></section>
 
         <section class="skills" id="skills"></section>
 
