Education and experience sections

--- a/src/index.html
+++ b/src/index.html
@@ -128,39 +128,74 @@
                 <div class="separator">
                     <span class="fa fas fa-star" aria-hidden="true"></span>
                 </div>
-                <div class="experience">
+                <div class="experience-items">
                     <div class="experience-item">
                         <h3 class="item-title">Senior Website Developer</h3>
                         <h4 class="item-subtitle">ARI Network Services</h4>
-                        <p class="item-description">I did the things with the stuff</p>
+                        <p class="item-description">Continuing to work with the Website R&amp;D team as a lead developer. Lead the team with ideas and execute on those ideas in a timely fashion. Continue providing new features and functionality for websites using the proprietary platform, and ensure that sites are using modern technologies and design practices.</p>
                         <div class="item-dates">
-                            <div class="start">March 2019</div>
-                            <div class="end">Present</div>
+                            <span class="start">March 2019</span>
+                            <span> - </span>
+                            <span class="end">Present</span>
                         </div>
                     </div>
                     <div class="experience-item">
                         <h3 class="item-title">Website Developer</h3>
                         <h4 class="item-subtitle">ARI Network Services</h4>
-                        <p class="item-description">I did the things with the stuff</p>
+                        <p class="item-description">Building out client websites on a proprietary platform, per specifications provided by a Website Implementation Specialist. A few months after starting on this position, moved to the Website Research &amp; Development team. On this team, we research new features and functionality that can be brought to the proprietary website platform by the website development team.</p>
                         <div class="item-dates">
-                            <div class="start">October 2017</div>
-                            <div class="end">February 2019</div>
+                            <span class="start">October 2017</span>
+                            <span> - </span>
+                            <span class="end">February 2019</span>
                         </div>
                     </div>
                     <div class="experience-item">
                         <h3 class="item-title">Website Implementation Specialist</h3>
                         <h4 class="item-subtitle">ARI Network Services</h4>
-                        <p class="item-description">I did the things with the stuff</p>
+                        <p class="item-description">Work with clients to determine their needs and requirements for a new website. Communicate those needs to the design and development teams effectively, in order to receive the best possible product for the client. Assist client with any changes necessary on their new website. Teach client how to use proprietary CMS system that is included with their website. Update domain DNS settings to put the client's website live upon project completion.</p>
                         <div class="item-dates">
-                            <div class="start">May 2016</div>
-                            <div class="end">December 2017</div>
+                            <span class="start">May 2016</span>
+                            <span> - </span>
+                            <span class="end">December 2017</span>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="education" id="education"></section>
+        <section class="education" id="education">
+            <div class="container">
+                <div class="education-title">
+                    <h2>
+                        <span>My</span>
+                        <span>Education</span>
+                    </h2>
+                </div>
+                <div class="separator">
+                    <span class="fa fas fa-star" aria-hidden="true"></span>
+                </div>
+                <div class="education-items">
+                    <div class="education-item">
+                        <h3 class="item-title">Lake Superior College</h3>
+                        <h4 class="item-subtitle">Duluth, Minnesota</h4>
+                        <p class="item-description">Associate of Science Degree in Computer and Website Programming</p>
+                        <div class="item-dates">
+                            <span class="start">2015</span>
+                            <span> - </span>
+                            <span class="end">2017</span>
+                        </div>
+                    </div>
+                    <div class="education-item">
+                        <h3 class="item-title">Cloquet Senior High School</h3>
+                        <h4 class="item-subtitle">Cloquet, Minnesota</h4>
+                        <p class="item-description">High School Diploma Received with Honors</p>
+                        <div class="item-dates">
+                            <span class="end">Graduation in 2014</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="skills" id="skills"></section>
 
