Update HTML and section styles

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
                 <div class="about-title">
                     <h2>
                         <span>About</span>
-                        <span>Nick</span>
+                        <span>Me</span>
                     </h2>
                 </div>
                 <div class="separator">
@@ -190,18 +190,67 @@
                         <h4 class="item-subtitle">Cloquet, Minnesota</h4>
                         <p class="item-description">High School Diploma Received with Honors</p>
                         <div class="item-dates">
-                            <span class="end">Graduation in 2014</span>
+                            <span class="start">Graduated</span>
+                            <span class="end">2014</span>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="skills" id="skills"></section>
+        <section class="skills" id="skills">
+            <div class="container">
+                <div class="setion-title">
+                    <h2>
+                        <span>My</span>
+                        <span>Skills</span>
+                    </h2>
+                </div>
+                <div class="section-subtitle">
+                    <h5>
+                        <span>Programming Languages</span>
+                        <span>&amp; Tools</span>
+                    </h5>
+                </div>
+                <div class="skill-list">
+                    <ul>
+                        <li>
+                            <span class="fab fa-facebook-f" aria-label="Facebook"></span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="additional-info">
+                    <ul>
+                        <li>Responsive Web Design</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
-        <section class="interests" id="interests"></section>
+        <section class="interests" id="interests">
+            <div class="container">
+                <div class="section-title">
+                    <h2>
+                        <span>Other</span>
+                        <span>Interests</span>
+                    </h2>
+                </div>
+                <div class="section-info">
+                    <p></p>
+                </div>
+            </div>
+        </section>
 
-        <section class="contact" id="contact"></section>
+        <section class="contact" id="contact">
+            <div class="container">
+                <div class="section-title">
+                    <h2>
+                        <span>Contact</span>
+                        <span>Me</span>
+                    </h2>
+                </div>
+            </div>
+        </section>
 
         <script src="static/js/jquery.min.js" type="text/javascript"></script>
         <script src="static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
