--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         <section class="hero" id="hero">
             <div class="container">
                 <div class="photo">
-                    <img src="static/img/nick.jpg" alt="Nick Mykkanen">
+                    <img src="static/img/nick.jpeg" alt="Nick Mykkanen">
                 </div>
                 <div class="name">
                     <h1>
@@ -68,7 +68,7 @@
 
         <section class="about" id="about">
             <div class="container">
-                <div class="about-title">
+                <div class="section-title">
                     <h2>
                         <span>About</span>
                         <span>Me</span>
@@ -119,7 +119,7 @@
 
         <section class="experience" id="experience">
             <div class="container">
-                <div class="experience-title">
+                <div class="section-title">
                     <h2>
                         <span>My</span>
                         <span>Experience</span>
@@ -165,7 +165,7 @@
 
         <section class="education" id="education">
             <div class="container">
-                <div class="education-title">
+                <div class="section-title">
                     <h2>
                         <span>My</span>
                         <span>Education</span>
@@ -200,7 +200,7 @@
 
         <section class="skills" id="skills">
             <div class="container">
-                <div class="setion-title">
+                <div class="section-title">
                     <h2>
                         <span>My</span>
                         <span>Skills</span>
@@ -251,6 +251,12 @@
                 </div>
             </div>
         </section>
+
+        <footer>
+            <div class="copyright text-muted text-center">
+                &copy; <script></script> Nick Mykkanen. <a href="https://gitlab.com/nickmykkanen/personal-website" target="_blank">Fork me on <span class="fab fa-gitlab" aria-hidden="true"></span> GitLab</a>
+            </div>
+        </footer>
 
         <script src="static/js/jquery.min.js" type="text/javascript"></script>
         <script src="static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
