Add form and basic floating label css

--- a/src/index.html
+++ b/src/index.html
@@ -214,14 +214,60 @@
                 </div>
                 <div class="skill-list">
                     <ul>
-                        <li>
-                            <span class="fab fa-facebook-f" aria-label="Facebook"></span>
+                        <li title="HTML5">
+                            <span class="fab fa-html5" aria-label="HTML5"></span>
+                        </li>
+                        <li title="CSS3">
+                            <span class="fab fa-css3-alt" aria-label="CSS3"></span>
+                        </li>
+                        <li title="Sass">
+                            <span class="fab fa-sass" aria-label="Sass"></span>
+                        </li>
+                        <li title="JavaScript + ECMAScript 2018+">
+                            <span class="fab fa-js" aria-label="JavaScript + ECMAScript 2018+"></span>
+                        </li>
+                        <li title="WordPress">
+                            <span class="fab fa-wordpress-simple" aria-label="WordPress"></span>
+                        </li>
+                        <li title="React JS">
+                            <span class="fab fa-react" aria-label="React JS"></span>
+                        </li>
+                        <li title="Node JS">
+                            <span class="fab fa-node-js" aria-label="Node JS"></span>
+                        </li>
+                        <li title="NPM">
+                            <span class="fab fa-npm" aria-label="NPM"></span>
+                        </li>
+                        <li title="Gulp">
+                            <span class="fab fa-gulp" aria-label="Gulp"></span>
+                        </li>
+                        <li title="Yarn">
+                            <span class="fab fa-yarn" aria-label="Yarn"></span>
+                        </li>
+                        <li title="Git">
+                            <span class="fab fa-git" aria-label="Git"></span>
+                        </li>
+                        <li title="Jira">
+                            <span class="fab fa-jira" aria-label="Jira"></span>
+                        </li>
+                        <li title="Adobe Creative Cloud">
+                            <span class="fab fa-adobe" aria-label="Adobe Creative Cloud"></span>
+                        </li>
+                        <li title="Linux">
+                            <span class="fab fa-linux" aria-label="Linux"></span>
                         </li>
                     </ul>
+                </div>
+                <div class="section-subtitle reverse">
+                    <span>Additional</span>
+                    <span>Skills</span>
                 </div>
                 <div class="additional-info">
                     <ul>
                         <li>Responsive Web Design</li>
+                        <li>Cross-Browser Testing &amp; Debugging</li>
+                        <li>Agile Development &amp; Scrum</li>
+                        <li>Cross Functional Teams</li>
                     </ul>
                 </div>
             </div>
@@ -236,7 +282,7 @@
                     </h2>
                 </div>
                 <div class="section-info">
-                    <p></p>
+                    <p>Outside of work, I'm an all-around tech enthusiast. I love experimenting with new technologies and devices. When I'm not enjoying the tech lifestyle, I like to play games with my friends and family. On a night in, I like to watch action and comedy movies, and am particularly interested in superhero movies.</p>
                 </div>
             </div>
         </section>
@@ -249,12 +295,29 @@
                         <span>Me</span>
                     </h2>
                 </div>
+                <div class="contact-form">
+                    <div class="form-group">
+                        <div class="form-label-group">
+                            <input type="text" class="form-control" id="name" placeholder="Name">
+                            <label for="name">Name</label>
+                        </div>
+                        <div class="form-label-group">
+                            <input type="email" class="form-control" id="email" placeholder="email@example.com">
+                            <label for="email">Email Address</label>
+                        </div>
+                        <div class="form-label-group">
+                            <textarea id="message" class="form-control" rows="3" placeholder="Message"></textarea>
+                            <label for="message">Message</label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
         <footer>
             <div class="copyright text-muted text-center">
-                &copy; <script></script> Nick Mykkanen. <a href="https://gitlab.com/nickmykkanen/personal-website" target="_blank">Fork me on <span class="fab fa-gitlab" aria-hidden="true"></span> GitLab</a>
+                &copy;
+                <script></script> Nick Mykkanen. <a href="https://gitlab.com/nickmykkanen/personal-website" target="_blank">Fork me on <span class="fab fa-gitlab" aria-hidden="true"></span> GitLab</a>
             </div>
         </footer>
 
