--- a/src/index.html
+++ b/src/index.html
@@ -314,10 +314,10 @@
             </div>
         </section>
 
-        <footer>
+        <footer class="bg-dark">
             <div class="copyright text-muted text-center">
                 &copy;
-                <script></script> Nick Mykkanen. <a href="https://gitlab.com/nickmykkanen/personal-website" target="_blank">Fork me on <span class="fab fa-gitlab" aria-hidden="true"></span> GitLab</a>
+                <script>var year = new Date().getFullYear(); (year > 2019) ? document.write('2019 - ' + year) : document.write(year);</script> Nick Mykkanen. <a href="https://gitlab.com/nickmykkanen/personal-website" target="_blank">Fork me on <span class="fab fa-gitlab" aria-hidden="true"></span> GitLab</a>
             </div>
         </footer>
 
