--- a/src/index.html
+++ b/src/index.html
@@ -296,20 +296,28 @@
                     </h2>
                 </div>
                 <div class="contact-form">
-                    <div class="form-group">
-                        <div class="form-label-group">
-                            <input type="text" class="form-control" id="name" placeholder="Name">
-                            <label for="name">Name</label>
+                    <form name="contact" method="POST" netlify netlify-honeypot="dontfill" data-netlify-recaptcha="true">
+                        <div class="hidden" hidden style="display: none !important;">
+                            <label for="dontfill">Don't fill out this field - it's for bot filtering:</label>
+                            <input type="text" id="dontfill" name="dontfill">
                         </div>
-                        <div class="form-label-group">
-                            <input type="email" class="form-control" id="email" placeholder="email@example.com">
-                            <label for="email">Email Address</label>
+                        <div class="form-group">
+                            <div class="form-label-group">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Name" required autocomplete="name">
+                                <label for="name">Name</label>
+                            </div>
+                            <div class="form-label-group">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="email@example.com" required autocomplete="email">
+                                <label for="email">Email Address</label>
+                            </div>
+                            <div class="form-label-group">
+                                <textarea id="message" class="form-control" rows="3" name="message" placeholder="Message" required></textarea>
+                                <label for="message">Message</label>
+                            </div>
+                            <div data-netlify-recaptcha="true"></div>
+                            <button type="button" class="btn btn-primary">Submit</button>
                         </div>
-                        <div class="form-label-group">
-                            <textarea id="message" class="form-control" rows="3" placeholder="Message"></textarea>
-                            <label for="message">Message</label>
-                        </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </section>
@@ -326,5 +334,4 @@
         <script src="js/script.js" type="text/javascript"></script>
         <script src="static/js/all.min.js" type="text/javascript"></script>
     </body>
-
 </html>
