--- a/src/index.html
+++ b/src/index.html
@@ -314,7 +314,7 @@
                                 <textarea id="message" class="form-control" rows="3" name="message" placeholder="Message" required></textarea>
                                 <label for="message">Message</label>
                             </div>
-                            <div data-netlify-recaptcha="true"></div>
+                            <div data-netlify-recaptcha="true" class="recaptcha"></div>
                             <button type="button" class="btn btn-primary">Submit</button>
                         </div>
                     </form>
