--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
         <section class="hero" id="hero">
             <div class="container">
                 <div class="photo">
-                    <img src="static/img/nick.jpeg" alt="Nick Mykkanen">
+                    <img src="static/img/nick-compressed.jpg" alt="Nick Mykkanen">
                 </div>
                 <div class="name">
                     <h1>
