--- a/src/index.html
+++ b/src/index.html
@@ -330,8 +330,8 @@
         </footer>
 
         <script src="static/js/jquery.min.js" type="text/javascript"></script>
-        <script src="static/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+        <script src="static/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="js/script.js" type="text/javascript"></script>
-        <script src="static/js/all.min.js" type="text/javascript"></script>
+        <script src="static/js/fontawesome-all.min.js" type="text/javascript"></script>
     </body>
 </html>
