--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,21 @@
         <title>Nick Mykkanen</title>
 
         <link rel="stylesheet" href="css/style.compiled.css">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="static/img/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="static/img/favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="194x194" href="static/img/favicons/favicon-194x194.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="static/img/favicons/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicons/favicon-16x16.png">
+        <link rel="manifest" href="static/img/favicons/site.webmanifest">
+        <link rel="mask-icon" href="static/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+        <link rel="shortcut icon" href="static/img/favicons/favicon.ico">
+        <meta name="apple-mobile-web-app-title" content="Nick Mykkanen">
+        <meta name="application-name" content="Nick Mykkanen">
+        <meta name="msapplication-TileColor" content="#f0f0f0">
+        <meta name="msapplication-config" content="static/img/favicons/browserconfig.xml">
+        <meta name="theme-color" content="#f0f0f0">
+        
     </head>
 
     <body data-spy="scroll" data-target=".navbar" data-offset="50" id="page-top">
