--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <meta name="msapplication-TileColor" content="#f0f0f0">
         <meta name="msapplication-config" content="static/img/favicons/browserconfig.xml">
         <meta name="theme-color" content="#f0f0f0">
-        
+
     </head>
 
     <body data-spy="scroll" data-target=".navbar" data-offset="50" id="page-top">
@@ -311,7 +311,7 @@
                     </h2>
                 </div>
                 <div class="contact-form">
-                    <form name="contact" method="POST" netlify netlify-honeypot="dontfill" data-netlify-recaptcha="true">
+                    <form name="contact" method="POST" netlify netlify-honeypot="dontfill" data-netlify-recaptcha="true" id="contactForm">
                         <div class="hidden" hidden style="display: none !important;">
                             <label for="dontfill">Don't fill out this field - it's for bot filtering:</label>
                             <input type="text" id="dontfill" name="dontfill">
@@ -330,7 +330,7 @@
                                 <label for="message">Message</label>
                             </div>
                             <div data-netlify-recaptcha="true" class="recaptcha"></div>
-                            <button type="button" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </form>
                 </div>
