Fix lighthouse audit issues

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <meta charset="utf-8">
@@ -103,27 +103,27 @@
                 <div class="social-icons">
                     <ul>
                         <li>
-                            <a href="https://www.linkedin.com/in/nick-mykkanen/" title="LinkedIn" target="_blank">
+                            <a href="https://www.linkedin.com/in/nick-mykkanen/" title="LinkedIn" target="_blank" rel="noreferrer">
                                 <span class="fab fa-linkedin-in" aria-label="LinkedIn"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://gitlab.com/nickmykkanen" title="GitLab" target="_blank">
+                            <a href="https://gitlab.com/nickmykkanen" title="GitLab" target="_blank" rel="noreferrer">
                                 <span class="fab fa-gitlab" aria-label="GitLab"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/nickmykkanen" title="GitHub" target="_blank">
+                            <a href="https://github.com/nickmykkanen" title="GitHub" target="_blank" rel="noreferrer">
                                 <span class="fab fa-github" aria-label="GitHub"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/nickmykkanen" title="Facebook" target="_blank">
+                            <a href="https://www.facebook.com/nickmykkanen" title="Facebook" target="_blank" rel="noreferrer">
                                 <span class="fab fa-facebook-f" aria-label="Facebook"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://t.me/nickmykkanen" title="Telegram" target="_blank">
+                            <a href="https://t.me/nickmykkanen" title="Telegram" target="_blank" rel="noreferrer">
                                 <span class="fab fa-telegram-plane" aria-label="Telegram"></span>
                             </a>
                         </li>
@@ -340,7 +340,7 @@
         <footer class="bg-dark">
             <div class="copyright text-muted text-center">
                 &copy;
-                <script>var year = new Date().getFullYear(); (year > 2019) ? document.write('2019 - ' + year) : document.write(year);</script> Nick Mykkanen. <a href="https://gitlab.com/nickmykkanen/personal-website" target="_blank">Fork me on <span class="fab fa-gitlab" aria-hidden="true"></span> GitLab</a>
+                <script>var year = new Date().getFullYear(); (year > 2019) ? document.write('2019 - ' + year) : document.write(year);</script> Nick Mykkanen. <a href="https://gitlab.com/nickmykkanen/personal-website" target="_blank" rel="noreferrer">Fork me on <span class="fab fa-gitlab" aria-hidden="true"></span> GitLab</a>
             </div>
         </footer>
 
