--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                     <span class="fa fas fa-star" aria-hidden="true"></span>
                 </div>
                 <div class="title">
-                    <h2>Website Developer <span>•</span> Software Engineer</h2>
+                    <h2>Website Developer</h2>
                 </div>
             </div>
         </section>
