--- a/src/index.html
+++ b/src/index.html
@@ -92,11 +92,6 @@
                 <div class="separator">
                     <span class="fa fas fa-star" aria-hidden="true"></span>
                 </div>
-                <!-- <div class="contact-info">
-                    <span class="location">Duluth, MN, USA</span>
-                    <span> • </span>
-                    <span class="phone"><a href="tel:(218) 451-2008">(218) 451-2008</a></span>
-                </div> -->
                 <div class="about-content">
                     <p>I'm a website developer in Duluth, Minnesota. I use modern technologies and frameworks to create functional interfaces, designed with the user in mind.</p>
                 </div>
@@ -238,8 +233,8 @@
                         <li title="Sass">
                             <span class="fab fa-sass" aria-label="Sass"></span>
                         </li>
-                        <li title="JavaScript + ECMAScript 2018+">
-                            <span class="fab fa-js" aria-label="JavaScript + ECMAScript 2018+"></span>
+                        <li title="JavaScript + ECMAScript 2018 and TypeScript">
+                            <span class="fab fa-js" aria-label="JavaScript + ECMAScript 2018 and TypeScript"></span>
                         </li>
                         <li title="WordPress">
                             <span class="fab fa-wordpress-simple" aria-label="WordPress"></span>
